# stonks

./: .gitignore  .wordlist.txt  .wordlists.txt  DESIGN.md  LAUNCH_LINUX.sh  LICENSE  README.md  TO DO.md  assumptions.toml  install.bat  main.py  mock_output  pyproject.toml  requirements.txt  run.bat  settings.toml  spellcheck.yml
.devcontainer/: Dockerfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
data/: A.json  AAL.json  AAP.json  AAPL.json  ABBV.json  ABC.json  ABT.json  ACGL.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  ADSK.json  AEE.json  AEP.json  AES.json  AFL.json  AIG.json  AIZ.json  AJG.json  AKAM.json  ALB.json  ALGN.json  ALK.json  ALL.json  ALLE.json  AMAT.json  AMCR.json  AMD.json  AME.json  AMGN.json  AMP.json  AMT.json  AMZN.json  ANET.json  ANSS.json  AON.json  AOS.json  APA.json  (+462 more)
data/ftse_all_share/: AAL.json  ADM.json  AGR.json  AGT.json  AHT.json  ATST.json  AZN.json  BAB.json  BBGI.json  BBH.json  BBY.json  BDEV.json  BHP.json  BIG.json  BLND.json  BME.json  BPCP.json  BPT.json  BUR.json  CCL.json  CEY.json  CNA.json  CPG.json  CRH.json  CTEC.json  CWK.json  DAL.json  DLN.json  DOCS.json  EDV.json  EOT.json  EVR.json  EZJ.json  FAN.json  FDM.json  FERG.json  FEVR.json  FLTR.json  FOUR.json  FRES.json  (+69 more)
data/s&p500/: AAL.json  AAP.json  ABBV.json  ABC.json  ABT.json  ADBE.json  AEP.json  AFL.json  (+239 more)
docs/: PULL_REQUEST_TEMPLATE.md  design.md  pull_request_template.md
input/: csv_to_json.py  custom_input.json  custom_input_gis.json  ftse_all_share.csv  ftse_all_share.json
output/: candidates_2023-07-28T11:30:50.json
stonks/: command_line_interface.py  companies.py  company.py  configuration.py  configure.py  error_handler.py  main.py  manager.py  storage.py
test/: test_configuration.py  test_error_handler.py  test_manager.py  test_storage.py
(+23 files in other folders)
