[tool.poetry]
name = "stonks"
version = "0.0.0a1"
description = "A quantitative analysis tool."
authors = ["Thomas Ashley <tom.daniel.ashley@gmail.com>"]
readme = "README.md"
packages = [{ include = "stonks" }]
repository = "https://github.com/computerise/stonks"

[tool.poetry.scripts]
stonks = "main:main"

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.31.0"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.19"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
responses = "^0.23.2"

# Only used in github actions
[tool.poetry.group.github-actions]
optional = true

[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
